samples/_failures_safe/1761552895_0f430e_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_7066f1fb.c: In function ‘main’:
./samples/SAFE/__tmp_7066f1fb.c:183:13: error: expected declaration or statement at end of input
  183 |             default:
      |             ^~~~~~~
./samples/SAFE/__tmp_7066f1fb.c:183:13: error: expected declaration or statement at end of input
./samples/SAFE/__tmp_7066f1fb.c:183:13: error: expected declaration or statement at end of input
